feat: add precommit validation; add basic details view
