# src/app/document/pages/document-details/document-details.viewmodel.ts
@@ -1,0 +1,10 @@
+import { DocumentDetail } from '../../../shared/generated';
+
+export interface DocumentDetailsViewModel {
+  details: DocumentDetail | undefined;
+  detailsLoadingIndicator: boolean;
+  backNavigationPossible: boolean;
+  detailsLoaded: boolean;
+  editMode: boolean;
+  isSubmitting: boolean;
+}
